k8s/overlays/gcp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  labels:
    app.kubernetes.io/name: web
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: simple-web-app-ip
    networking.gke.io/managed-certificates: web-cert
    networking.gke.io/v1beta1.FrontendConfig: web-frontendconfig
spec:
  rules:
    - host: board.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
